--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -132,13 +132,13 @@
 					<!-- The four columns -->
 					<div class="row">
 						<div class="column">
-							<img src="./images/referenzen_01.jpg" alt="Innenbüro mit Glasmontage" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_01.jpg" alt="Wintergarten mit Glasarbeit" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_02.jpg" alt="Wintergarten mit Glasarbeit" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_02.jpg" alt="Glasmontage von einem Privatanwesen" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_03.jpg" alt="Privathaus mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/referenzen_03.jpg" alt="Büro Fenstermontage" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
 							<img src="./images/referenzen_04.jpg" alt="Grossraumbüro mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
