--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -60,13 +60,16 @@
 		}
 
 		/* Expanding image text */
-		#imgtext {
-			position: absolute;
-			bottom: 15px;
-			left: 15px;
-			color: white;
-			font-size: 20px;
-		}
+        #imgtext {
+            position: absolute;
+            bottom: 15px;
+            left: 15px;
+            color: #ecf0f1;
+            font-size: 20px;
+            background-color: #2c3e50;
+			font-size: 14px;
+			padding : 10px;
+        }
 
 		/* Closable button inside the expanded image */
 		.closebtn {
