--- a/showroom/roi-bau.ch/abbruch.html
+++ b/showroom/roi-bau.ch/abbruch.html
@@ -102,7 +102,7 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" /></li>
+							<li><input type="submit" value="Senden" /></li>
 						</ul>
 					</form>
 				</section>
