--- a/showroom/roi-bau.ch/aushub.html
+++ b/showroom/roi-bau.ch/aushub.html
@@ -103,7 +103,7 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" /></li>
+							<li><input type="submit" value="Senden" /></li>
 						</ul>
 					</form>
 				</section>
