--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -14,8 +14,18 @@
 	<meta property="og:title" content="ROI & BAU GmbH lassen sie ihre Bauwünsche von uns zu ihrem Traumprojekt verwandeln." />
 	<meta property="og:description" content="Vom Bauplan zum Traumprojekt." />
 	<meta property="og:image" content="./images/linkshare.jpg" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="manifest" href="/images/site.webmanifest">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="/images/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="/images/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 	<style>
 		* {
 			box-sizing: border-box;
@@ -60,16 +70,16 @@
 		}
 
 		/* Expanding image text */
-        #imgtext {
-            position: absolute;
-            bottom: 15px;
-            left: 15px;
-            color: #ecf0f1;
-            font-size: 20px;
-            background-color: #2c3e50;
+		#imgtext {
+			position: absolute;
+			bottom: 15px;
+			left: 15px;
+			color: #ecf0f1;
+			font-size: 20px;
+			background-color: #2c3e50;
 			font-size: 14px;
-			padding : 10px;
-        }
+			padding: 10px;
+		}
 
 		/* Closable button inside the expanded image */
 		.closebtn {
@@ -260,7 +270,7 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" /></li>
+							<li><input type="submit" value="Senden" /></li>
 						</ul>
 					</form>
 				</section>
