--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -139,7 +139,7 @@
 				<article class="post featured">
 					<div style="text-align:center">
 						<h2>IHR BAUUNTERNEHMEN! QUALITÄT STEHT AN ERSTER STELLE</h2>
-						<p> Seit 2021 ist ROI&amp;BAU GmbH ein zuverlässiger Baudienstleister. Sie möchten ein paar handwerkliche Arbeiten in Ihrem Haus oder Ihren Geschäftsräumen in Angriff nehmen? Bei uns sind Sie richtig. Wir haben in ganz Zürich und Umgebung einen ausgezeichneten Ruf, den wir unserem exzellenten Kundenservice, der stets perfekten Ausführung unserer Arbeit und hervorragenden Qualitätsprodukten verdanken. Setzen Sie sich mit uns in Verbindung, um herauszufinden, was wir für Sie tun können.</p>
+						<p> Wir sind ROI&amp;BAU GmbH ein zuverlässiger Baudienstleister. Sie möchten ein paar handwerkliche Arbeiten in Ihrem Haus oder Ihren Geschäftsräumen in Angriff nehmen? Bei uns sind Sie richtig. Wir haben in ganz Zürich und Umgebung einen ausgezeichneten Ruf, den wir unserem exzellenten Kundenservice, der stets perfekten Ausführung unserer Arbeit und hervorragenden Qualitätsprodukten verdanken. Setzen Sie sich mit uns in Verbindung, um herauszufinden, was wir für Sie tun können.</p>
 					</div>
 
 					<!-- The four columns -->
