--- a/showroom/roi-bau.ch/referenzen_1.html
+++ b/showroom/roi-bau.ch/referenzen_1.html
@@ -76,6 +76,7 @@
 					</header>
 					<img class="image fit" src="./images/referenzen_01.jpg" alt="" />
 					<p>Für diesen Kunden und sein traumhafter Wintergarten durften wir die Montage der Fenster, Lieferung und Bau vor Ort übernehmen.</p>
+					<p>Ein schöner Anbau mit traumhaften Blick über die Stadt, solche Projekte setzen wir gerne für unsere Kunden um, scheuen Sie nicht uns über Whatsapp zu erreichen und kriegen sie noch heute einen Termin für ein Projekt.</p>
 					<p>Lassen Sie noch heute Ihr Traumprojekt von uns für sie zu einem einmaligem, professionellen Auftrag verwandeln.</p>
 
 					<ul class="actions special">
