--- a/showroom/roi-bau.ch/referenzen_2.html
+++ b/showroom/roi-bau.ch/referenzen_2.html
@@ -77,6 +77,7 @@
 					</header>
 					<img class="image fit" src="images/referenzen_02.jpg" alt="" />
 					<p>Für dieses top moderne Anwesen konnten wir die Montage der Fenster im Vorfeld anfertigen und verbauen.</p>
+					<p>Wir sind sehr stolz auf unsere Zusammenarbeit an diesem Anwesen, auch für Sie können wir solch ein Projekt innerhalb von wenigen Tagen umsetezen.</p>
 					<p>Der Kunde ist immernoch überwältigt von dem Abschluss des Baues, noch nie hatte er so ein problemloser Ausführung erlebt.</p>
 
 					<ul class="actions special">
