--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -139,22 +139,23 @@
 				<article class="post featured">
 					<div style="text-align:center">
 						<h2>IHR BAUUNTERNEHMEN! QUALITÄT STEHT AN ERSTER STELLE</h2>
-						<p> Wir sind ROI&amp;BAU GmbH ein zuverlässiger Baudienstleister. Sie möchten ein paar handwerkliche Arbeiten in Ihrem Haus oder Ihren Geschäftsräumen in Angriff nehmen? Bei uns sind Sie richtig. Wir haben in ganz Zürich und Umgebung einen ausgezeichneten Ruf, den wir unserem exzellenten Kundenservice, der stets perfekten Ausführung unserer Arbeit und hervorragenden Qualitätsprodukten verdanken. Setzen Sie sich mit uns in Verbindung, um herauszufinden, was wir für Sie tun können.</p>
+						<p> Wir sind ROI&amp;BAU GmbH ein zuverlässiger Baudienstleister. Sie möchten ein paar handwerkliche Arbeiten in Ihrem Haus oder Ihren Geschäftsräumen in Angriff nehmen? </p>
+						<p> Bei uns sind Sie richtig. Wir haben in ganz Zürich und Umgebung einen ausgezeichneten Ruf, den wir unserem exzellenten Kundenservice, der stets perfekten Ausführung unserer Arbeit und hervorragenden Qualitätsprodukten verdanken. Setzen Sie sich mit uns in Verbindung, um herauszufinden, was wir für Sie tun können.</p>
 					</div>
 
 					<!-- The four columns -->
 					<div class="row">
 						<div class="column">
-							<img src="./images/referenzen_01.jpg" alt="Wintergarten mit Glasarbeit" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_02.jpg" alt="Glasmontage von einem Privatanwesen" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_03.jpg" alt="Büro Fenstermontage" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/gallery_3.jpg" alt="Büro Fenstermontage" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/referenzen_04.jpg" alt="Grossraumbüro mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/gallery_4.jpg" alt="Grossraumbüro mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
 						</div>
 					</div>
 
