--- a/showroom/roi-bau.ch/aushub.html
+++ b/showroom/roi-bau.ch/aushub.html
@@ -78,7 +78,9 @@
 					<p>Wenn sie eine grösseren Aushub mit Bagger benötigen, so können wir innert Tagen Fachkräft zur Verfügung geben und fachmännisch Sie unterstützen.</p>
 					<p>Rufen sie noch heute ab oder schicken sie uns eine Whatsapp Nachricht für eine Beratung.</p>
 					<ul class="actions special">
+						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+						<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 					</ul>
 				</section>
 
