--- a/showroom/roi-bau.ch/baumeister.html
+++ b/showroom/roi-bau.ch/baumeister.html
@@ -78,7 +78,9 @@
 					<p>Zusammen mit unserem Kunden bauen wir ihr neues Zuhause, wir helfen, bauen und sorgen für einen professionelle Umsetzung.</p>
 					<p>>Wir helfen Ihnen überall mit ihren Bauprojekten, sei es mit einem neuem Vorplatz oder ein neuer Gehweg in den Garten.</p>
 					<ul class="actions special">
+						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+						<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 					</ul>
 				</section>
 
