--- a/showroom/roi-bau.ch/fliessen_plattenlegen.html
+++ b/showroom/roi-bau.ch/fliessen_plattenlegen.html
@@ -80,7 +80,9 @@
 					<div class="image main"><img src="images/pic07_2.jpg" alt="" /></div>
 					<p>Wenn sie Hilfe brauchen bei der Umsetzung eines neuen Bodens zögern Sie nicht uns zu schreiben.</p>
 					<ul class="actions special">
+						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+						<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 					</ul>
 				</section>
 
