--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -178,11 +178,11 @@
 					<header class="major">
 					</header>
 
+
 					<ul class="actions special">
-						<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
-					</ul>
-					<ul class="actions special">
+						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+						<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 					</ul>
 				</article>
 
