--- a/showroom/roi-bau.ch/kanalisation.html
+++ b/showroom/roi-bau.ch/kanalisation.html
@@ -80,7 +80,9 @@
 					<div class="image main"><img src="images/pic04_2.jpg" alt="" /></div>
 					<p>Falls sie ein neues Rohr legen müssen, Kanalisationsarbeiten haben oder einfach eine Renovation der Anlage wünschen so können wir schnell und fachgerecht Ihnen helfen.</p>
 					<ul class="actions special">
+						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+						<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 					</ul>
 				</section>
 
