--- a/showroom/roi-bau.ch/trockenbau.html
+++ b/showroom/roi-bau.ch/trockenbau.html
@@ -80,7 +80,9 @@
 				<div class="image main"><img src="images/pic06_2.jpg" alt="" /></div>
 				<p>Hier sehen sie unser Fachpersonal beim Umsetzen einer Wandisiolation für ein Raum. Unser Team setzt alle Ihre Wünsche um, genau so wie Sie es fordern.</p>
 				<ul class="actions special">
+					<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
 					<li><a href="https://api.whatsapp.com/send?phone=041786800025" class="button large">Whatsapp</a></li>
+					<li><a href="tel:041786800025" class="button large">Anrufen</a></li>
 				</ul>
 			</section>
 
