--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -152,10 +152,10 @@
 							<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/gallery_3.jpg" alt="Büro Fenstermontage" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 						</div>
 						<div class="column">
-							<img src="./images/gallery_4.jpg" alt="Grossraumbüro mit Fenstermontur" style="width:100%" onclick="myFunction(this);">
+							<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 						</div>
 					</div>
 
