--- a/showroom/roi-bau.ch/aushub.html
+++ b/showroom/roi-bau.ch/aushub.html
@@ -134,28 +134,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic03_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 				</div>
 
@@ -180,9 +180,7 @@
 						<h1>Aushub und Fundament</h1>
 						<p>Als Baudienstleister helfen wir natürlich auch mit sämtlichen Fundament und Aushub arbeiten.</p>
 					</header>
-					<div class="image main"><img src="images/pic03_1.jpg" alt="" /></div>
 					<p>Unsere Experten heben aus, messen die Gräde und führen für sie Bagger und Spatten. Ob Nur kleine Wandarbeit oder ein komplett neues Fundament legen, für unsere Kunden machen wir alles. Fachmännisch und professionell.</p>
-					<div class="image main"><img src="images/pic03_2.jpg" alt="" /></div>
 					<p>Wenn sie eine grösseren Aushub mit Bagger benötigen, so können wir innert Tagen Fachkräft zur Verfügung geben und fachmännisch Sie unterstützen.</p>
 					<p>Rufen sie noch heute ab oder schicken sie uns eine Whatsapp Nachricht für eine Beratung.</p>
 					<ul class="actions special">
