--- a/showroom/roi-bau.ch/fliessen_plattenlegen.html
+++ b/showroom/roi-bau.ch/fliessen_plattenlegen.html
@@ -137,28 +137,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>					
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic07_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 				</div>
 
@@ -183,9 +183,7 @@
 						<h1>Fliessen und Plattenlegen</h1>
 						<p>Vom neuem Steinboden bis zum Holz Boden wir bieten Ihnen alles an.</p>
 					</header>
-					<div class="image main"><img src="images/pic07_1.jpg" alt="" /></div>
 					<p>Wir setzen ihr Neubau oder Renovation um, auch im Bereich Boden sind unsere Fachkräfte stetts bemüht Ihnen jeden Kundenwunsch umzusetzen.</p>
-					<div class="image main"><img src="images/pic07_2.jpg" alt="" /></div>
 					<p>Wenn sie Hilfe brauchen bei der Umsetzung eines neuen Bodens zögern Sie nicht uns zu schreiben.</p>
 					<ul class="actions special">
 						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
