--- a/showroom/roi-bau.ch/kanalisation.html
+++ b/showroom/roi-bau.ch/kanalisation.html
@@ -137,29 +137,30 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic04_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic04_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic04_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic04_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
-					<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+					<div class="column">
+						<img src="./images/pic04_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+					</div>
+					<div class="column">
+						<img src="./images/pic04_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+					</div>
+					<div class="column">
+					<	img src="./images/pic04_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+					</div>
+					<div class="column">
+						<img src="./images/pic04_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+					</div>
 				</div>
-				<div class="column">
-					<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
-				</div>
-				<div class="column">
-					<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
-				</div>
-				<div class="column">
-					<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
-				</div>
-			</div>
 
 				<div class="container">
 					<span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
@@ -182,9 +183,7 @@
 						<h1>Kanalisations </br> Arbeiten</h1>
 						<p>Von Regenabtropf System bis zum Rohrlegung zur Kanalisation wir helfen Ihnen schnell, professionell und fachmännisch.</p>
 					</header>
-					<div class="image main"><img src="images/pic04_1.jpg" alt="" /></div>
 					<p>Unsere Fachmänner heben die Rohre auf, legen neue oder ersetzen alte Rohre.</p>
-					<div class="image main"><img src="images/pic04_2.jpg" alt="" /></div>
 					<p>Falls sie ein neues Rohr legen müssen, Kanalisationsarbeiten haben oder einfach eine Renovation der Anlage wünschen so können wir schnell und fachgerecht Ihnen helfen.</p>
 					<ul class="actions special">
 						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
