--- a/showroom/roi-bau.ch/abbruch.html
+++ b/showroom/roi-bau.ch/abbruch.html
@@ -135,34 +135,34 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_1.jpg"  alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic02_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 				</div>
 
 				<div class="container">
 					<span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-					<img id="expandedImg" style="width:100%">
+					<img id="expandedImg" class ="image main "style="width:100%">
 					<div id="imgtext"></div>
 				</div>
 
@@ -181,9 +181,7 @@
 						<h1>Abbruch und Demontage</h1>
 						<p>Als Produkt bieten wir Ihnen an, den kompletten Abbruch durchzuführen, zusammen mit Baggerarbeiten und Betonschnitt, machen wir alles damit Sie ein möglichst angenehmer Umbau vor sich haben.</p>
 					</header>
-					<div class="image main"><img src="images/pic02_1.jpg" alt="" /></div>
 					<p>Vor der Renovation oder dem Neubau ist der Abbruch, und hier ist es besonders wichtig die richtigen Lösungen zu finden für unsere Kunden, wir sind stets bemüht eine saubere und schnelle Dienstleistung für unseren Kunden zu erbringen.</p>
-					<div class="image main"><img src="images/pic02_2.jpg" alt="" /></div>
 					<p>Wir helfen Ihnen rundum, egal ob es nur ein Betonschneiden oder eine neue Wand ziehen ist, für unsere Kunden finden wir immer die massgeschneiderete Lösung und helfen Ihnen beim umsetzen des Bauplans.</p>
 					<ul class="actions special">
 						<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
