--- a/showroom/roi-bau.ch/baumeister.html
+++ b/showroom/roi-bau.ch/baumeister.html
@@ -134,28 +134,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/pic05_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 					</div>
 
 				</div>
@@ -181,9 +181,7 @@
 						<h1>Baumeister</h1>
 						<p>Vom Bauplan zum fertigem Haus, als Baumeister helfen wir unseren Kunden immer wieder bei Ihren Projekten. Egal ob es ein Neubau ist oder nur eine Renovation unsere Fachkräfte sind immer voll zu Ihrer Unterstützung da.</p>
 					</header>
-					<div class="image main"><img src="images/pic05_1.jpg" alt="" /></div>
 					<p>ROI&amp;BAU GmbH hat sehr viel Erfahrung mit diesem Service. Wir verwenden dabei nur bewährte Ausrüstung und arbeiten mit zuverlässigen Materiallieferanten zusammen. Wir bieten Ihnen professionelle und erfahrene Hilfe bei Ihren Bauarbeiten an, und unterstützen Sie dabei, Ihre individuellen Projekte im Rahmen Ihres Budgets umzusetzen. Wir möchten ausgezeichneten Kundenservice bieten. Deshalb legen wir großen Wert auf klare Kommunikation, damit Sie den Fortschritt der Arbeit in jeder Phase mitverfolgen können.</p>
-					<div class="image main"><img src="images/pic05_2.jpg" alt="" /></div>
 					<p>Zusammen mit unserem Kunden bauen wir ihr neues Zuhause, wir helfen, bauen und sorgen für einen professionelle Umsetzung.</p>
 					<p>>Wir helfen Ihnen überall mit ihren Bauprojekten, sei es mit einem neuem Vorplatz oder ein neuer Gehweg in den Garten.</p>
 					<ul class="actions special">
