--- a/showroom/roi-bau.ch/trockenbau.html
+++ b/showroom/roi-bau.ch/trockenbau.html
@@ -136,28 +136,28 @@
 			<!-- The four columns -->
 			<div class="row">
 				<div class="column">
-					<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/gallery_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/pic06_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
 				</div>
 			</div>
 
@@ -183,9 +183,7 @@
 					<h1>Trockenbau </br> Arbeiten</h1>
 					<p>Auch im Innenbereich helfen unsere Fachmänner unseren Kunden immer wieder, von Ziehen einer Wand mit Isiolation bis zum legen von Fenster.</p>
 				</header>
-				<div class="image main"><img src="images/pic06_1.jpg" alt="" /></div>
 				<p>Lassen sie von uns ihre Wände neu beziehen, bis zum Malen bieten wir Ihnen alles an. Unsere Fachkräft übernehmen von Ihnen ihre Wünsche und verwandeln ihr Heimprojekt zum Bauplan ihrer Wünsche. Durch unsere Fachkräfte werden ihre Wünsche fachgerecht umgesetzt.</p>
-				<div class="image main"><img src="images/pic06_2.jpg" alt="" /></div>
 				<p>Hier sehen sie unser Fachpersonal beim Umsetzen einer Wandisiolation für ein Raum. Unser Team setzt alle Ihre Wünsche um, genau so wie Sie es fordern.</p>
 				<ul class="actions special">
 					<li><a href="mailto:info@roi-bau.ch" class="button large">Email</a></li>
