change gallery added

--- a/showroom/roi-bau.ch/aushub.html
+++ b/showroom/roi-bau.ch/aushub.html
@@ -65,6 +65,7 @@
 		.container {
 			position: relative;
 			display: none;
+			padding: 0px;
 		}
 
 		/* Expanding image text */
@@ -74,7 +75,6 @@
 			left: 15px;
 			color: #ecf0f1;
 			font-size: 20px;
-			background-color: #2c3e50;
 			font-size: 14px;
 			padding: 10px;
 		}
@@ -83,7 +83,7 @@
 		.closebtn {
 			position: absolute;
 			top: 10px;
-			right: 15px;
+			right: 40px;
 			color: white;
 			font-size: 35px;
 			cursor: pointer;
@@ -134,28 +134,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/pic03_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_1.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_2.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_3.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_4.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_5.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_6.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_7.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic03_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/aushub03_8.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 				</div>
 
