--- a/showroom/roi-bau.ch/baumeister.html
+++ b/showroom/roi-bau.ch/baumeister.html
@@ -80,14 +80,14 @@
 		}
 
 		/* Closable button inside the expanded image */
-		.closebtn {
-			position: absolute;
-			top: 10px;
-			right: 15px;
-			color: white;
-			font-size: 35px;
-			cursor: pointer;
-		}
+        .closebtn {
+            position: absolute;
+            top: 10px;
+            right: 40px;
+            color: white;
+            font-size: 35px;
+            cursor: pointer;
+        }
 	</style>
 </head>
 	<body class="is-preload">
@@ -134,28 +134,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/pic05_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_1.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_2.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_3.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_4.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_5.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_6.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_7.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic05_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/baumeister05_8.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 
 				</div>
