--- a/showroom/roi-bau.ch/kanalisation.html
+++ b/showroom/roi-bau.ch/kanalisation.html
@@ -76,9 +76,6 @@
 			left: 15px;
 			color: #ecf0f1;
 			font-size: 20px;
-			background-color: #2c3e50;
-			font-size: 14px;
-			padding: 10px;
 		}
 
 		/* Closable button inside the expanded image */
@@ -137,28 +134,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/pic04_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_1.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic04_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_2.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic04_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_3.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic04_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_4.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic04_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_5.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic04_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_6.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-					<	img src="./images/pic04_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_7.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic04_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/kanalisation04_8.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 				</div>
 
