--- a/showroom/roi-bau.ch/abbruch.html
+++ b/showroom/roi-bau.ch/abbruch.html
@@ -74,20 +74,19 @@
 			left: 15px;
 			color: #ecf0f1;
 			font-size: 20px;
-			background-color: #2c3e50;
 			font-size: 14px;
 			padding: 10px;
 		}
 
 		/* Closable button inside the expanded image */
-		.closebtn {
-			position: absolute;
-			top: 10px;
-			right: 15px;
-			color: white;
-			font-size: 35px;
-			cursor: pointer;
-		}
+        .closebtn {
+            position: absolute;
+            top: 10px;
+            right: 40px;
+            color: white;
+            font-size: 35px;
+            cursor: pointer;
+        }
 	</style>
 </head>
 	<body class="is-preload">
@@ -135,28 +134,28 @@
 				<!-- The four columns -->
 				<div class="row">
 					<div class="column">
-						<img src="./images/pic02_1.jpg"  alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_1.jpeg"  alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_2.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_3.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_4.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_5.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_6.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_7.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 					<div class="column">
-						<img src="./images/pic02_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+						<img src="./images/abbruch01_8.jpeg" alt="" style="width:100%" onclick="myFunction(this);">
 					</div>
 				</div>
 
