--- a/showroom/roi-bau.ch/trockenbau.html
+++ b/showroom/roi-bau.ch/trockenbau.html
@@ -81,14 +81,14 @@
 		}
 
 		/* Closable button inside the expanded image */
-		.closebtn {
-			position: absolute;
-			top: 10px;
-			right: 15px;
-			color: white;
-			font-size: 35px;
-			cursor: pointer;
-		}
+        .closebtn {
+            position: absolute;
+            top: 10px;
+            right: 40px;
+            color: white;
+            font-size: 35px;
+            cursor: pointer;
+        }
 	</style>
 </head>
 <body class="is-preload">
@@ -136,28 +136,28 @@
 			<!-- The four columns -->
 			<div class="row">
 				<div class="column">
-					<img src="./images/pic06_1.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_1.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_2.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_2.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_3.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_3.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_4.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_4.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_5.jpg" alt="Innovatives Bauunternehmen" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_5.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_6.jpg" alt="Vom Projekt, zum Bauplan bis hin zur Umsetzung" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_6.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_7.jpg" alt="Unsere Fachkräfte helfen Ihnen stets freundlich und professionel" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_7.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 				<div class="column">
-					<img src="./images/pic06_8.jpg" alt="Eine schöne Fensterarbeit mit Aussicht über die ganze Stadt" style="width:100%" onclick="myFunction(this);">
+					<img src="./images/trockenbau_06_8.jpg" alt="" style="width:100%" onclick="myFunction(this);">
 				</div>
 			</div>
 
